@@ -1,3 +1,7 @@
+2016-10-06  Kugan Vivekanandarajah  <kuganv@linaro.org>
+
+	* gcc.dg/tree-ssa/evrp4.c: New test.
+
 2016-10-06  Jeff Law  <law@redhat.com>
 
 	PR tree-optimization/71661
